# drawmeapicture

./: README.md
firmware/: platformio.ini
firmware/lib/screen/: screen.cpp  screen.h
firmware/src/: main.cpp
server/: Cargo.toml  index.html
server/src/: main.rs
