[package]
name = "drawmeapicture"
version = "0.1.0"
edition = "2021"

[dependencies]
# async rt
tokio = { version = "1.20.1", features = ["full"] }

# http
actix-web = "4.1.0"
actix-files = "0.6.2"

# structures
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

# pc <-> arduino
serialport = "4.2.0"
crc32fast = "1.3.2"

# logging (mainly actix)
env_logger = "0.9.0"
log = "0.4.17"

# color stuff
colors-transform = "0.2.11"
rgb565 = "0.1.3"